birra-pt/birraapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: birraapi
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: birraapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birraapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: birraapi
  template:
    metadata:
      labels:
        app: birraapi
    spec:
      containers:
      - name: birraapi
        image: ptorrezao/birraapi:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
