birra-pt/birrafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: birra-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  backend:
    serviceName: birrafe
    servicePort: 80
  tls:
  - hosts:
    - www.birra.pt
    - mysql.birra.pt
    - api.birra.pt
    secretName: birra-tls
  rules:
  - host: www.birra.pt
    http:
      paths:
      - backend:
          serviceName: birrafe
          servicePort: 80
  - host: mysql.birra.pt
    http:
      paths:
      - backend:
          serviceName: phpmyadmin-service
          servicePort: 80
  - host: api.birra.pt
    http:
      paths:
      - backend:
          serviceName: birraapi
          servicePort: 80
